force/src/objects/vspresourcelinks__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting is used to define the global link buttons displayed on the bottom page of the VSPGlobalSales community.</description>
    <fields>
        <fullName>Chatter__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Chatter</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Globalview__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Globalview</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Path_to_Premier__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Path_to_Premier</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>VSP_com__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>VSP.com</label>
        <type>Url</type>
    </fields>
    <label>vspresourcelinks</label>
</CustomObject>